--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20200730~sparky6~0 (2020-07-30)
+-------------------------------------------------------------------------------
+  * Changed Riot Desktop to Element Desktop
+  * Updated Hungarian locales
+  * Change dir to home before picking a deb file of local install 
+
+-------------------------------------------------------------------------------
   Version 20200725~sparky6~0 (2020-07-25)
 -------------------------------------------------------------------------------
   * Initial release beta1
