--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20200823~sparky6~0 (2020-08-23)
+-------------------------------------------------------------------------------
+  * Updated Trinity repo
+  * Removed qemy-kvm, cool-retro-term, opentyrian, cavezofphear, curseofwar, tetrinet-client, tome, scrcpy
+  * Added Accessories - Weather category
+
+-------------------------------------------------------------------------------
   Version 20200808~sparky6~0 (2020-07-30)
 -------------------------------------------------------------------------------
   * Added Russian locale
