--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20201023~sparky6~0 (2020-10-23)
+-------------------------------------------------------------------------------
+  * Added Boostnote, OnionShare, Timekpr-nExt, XanMod kernel installer
+  * Removed calamares, xpdf
+  * Small fixes
+
+-------------------------------------------------------------------------------
   Version 20201018~sparky6~0 (2020-10-18)
 -------------------------------------------------------------------------------
   * sparky-su replaced by sparky-remsu
