--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20201203~sparky6~0 (2020-12-03)
+-------------------------------------------------------------------------------
+  * Install Strawberry on amd64 only
+  * Removed cairo-dock-core, fbpanel, gweled
+  * Added grsync, meld, simplest-studio, next, slimjet, linux-cpupower 
+
+-------------------------------------------------------------------------------
   Version 20201109~sparky6~0 (2020-11-10)
 -------------------------------------------------------------------------------
   * Added Hiero, BPyTop, CPU-X, LazPaint]
