--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20201217~sparky6~0 (2020-12-17)
+-------------------------------------------------------------------------------
+  * Added Pogo, KDEConnect, Zettlr, cpufrequtils, cpupower-gui, Rescuezilla
+  * Removed thonny, cairo-dock, jerry
+
+-------------------------------------------------------------------------------
   Version 20201203~sparky6~0 (2020-12-03)
 -------------------------------------------------------------------------------
   * Install Strawberry on amd64 only
