--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20210121~sparky6~0 (2021-01-21)
+-------------------------------------------------------------------------------
+  * Added DeepL-Linux, Cheese, Tribler, hv3, Tomboy-NG
+  * Removed spyder
+
+-------------------------------------------------------------------------------
   Version 20201223~sparky6~0 (2020-12-23)
 -------------------------------------------------------------------------------
   * Added netdata, cozy
