--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20210121.1~sparky6~0 (2021-01-21)
+-------------------------------------------------------------------------------
+  * Small fixes
+
+-------------------------------------------------------------------------------
   Version 20210121~sparky6~0 (2021-01-21)
 -------------------------------------------------------------------------------
   * Added DeepL-Linux, Cheese, Tribler, hv3, Tomboy-NG
