--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20210303~sparky6~0 (2021-03-03)
+-------------------------------------------------------------------------------
+  * Small fix
+
+-------------------------------------------------------------------------------
   Version 20210302~sparky6~0 (2021-03-02)
 -------------------------------------------------------------------------------
   * Small fixes
