--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20210312~sparky6~0 (2021-03-12)
+-------------------------------------------------------------------------------
+  * Remove signed-template package from linux-image list of old-kernel-remover
+  * Added multios-usb
+
+-------------------------------------------------------------------------------
   Version 20210303~sparky6~0 (2021-03-03)
 -------------------------------------------------------------------------------
   * Small fix
