--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20210517~sparky6~0 (2021-05-17)
+-------------------------------------------------------------------------------
+  * Added changelog page
+  * Added openjava
+
+-------------------------------------------------------------------------------
   Version 20210515~sparky6~0 (2021-05-15)
 -------------------------------------------------------------------------------
   * Added kget-integrator, uget-integrator, gnome-shell-mailnag, ayatana-webmail, gnubiff, tagspaces, rednotebook, videotrans, zoneminder, bombono-dvd, foobnix, freetuxtv, gmorgan, handbrake, imagination, jampal, karlyriceditor, kmidimon, qarte, retroarch, shorten, slowmovideo, smillaenlarger, spek, vcdimager, vqmt, xcutmp3, youtube-dl, youtubedl-gui
