--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20210609~sparky6~0 (2021-06-09)
+-------------------------------------------------------------------------------
+  * Added hamsket, android-messager-desktop, freetube, wireguard, freelan, openconnect, openvpn, nuntius
+  * Don't search on changelog file
+-------------------------------------------------------------------------------
   Version 20210524~sparky6~0 (2021-05-24)
 -------------------------------------------------------------------------------
   * Separated instalation of openjdk and openjre
