--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20210615~sparky6~0 (2021-06-15)
+-------------------------------------------------------------------------------
+  * Removed Exit button from Install pages
+
+-------------------------------------------------------------------------------
   Version 20210613~sparky6~0 (2021-06-13)
 -------------------------------------------------------------------------------
   * Added Exit button
