--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20210724~sparky6~0 (2021-07-24)
+-------------------------------------------------------------------------------
+  * Small fixes
+  * Added sparky-welcome
+
+-------------------------------------------------------------------------------
   Version 20210723~sparky6~0 (2021-07-23)
 -------------------------------------------------------------------------------
   * Added frostwire, lightworks, nuclear, shortwave, komorebi, enve, luakit, viper-browser
