--- a/01-yad/CHANGELOG
+++ b/01-yad/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20210801~sparky6~0 (2021-08-01)
+-------------------------------------------------------------------------------
+  * Fixed desktop removing
+  * Added chirp, systemback
+
+-------------------------------------------------------------------------------
   Version 20210724~sparky6~0 (2021-07-24)
 -------------------------------------------------------------------------------
   * Small fixes
