--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20210827~sparky6~0 (2021-08-27)
+-------------------------------------------------------------------------------
+  * Changed exfat-utils to exfatprogs
+  * Added litecoin-qt, pinta, ulauncher, feedreader, newsboat, gnome-feeds
+
+-------------------------------------------------------------------------------
   Version 20210815~sparky6~0 (2021-08-15)
 -------------------------------------------------------------------------------
   * Updated locale installation
