--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20210827~sparky7~0 (2021-08-27)
+-------------------------------------------------------------------------------
+  * Added litecoin-qt, pinta, ulauncher, feedreader, newsboat, gnome-feeds
+
+-------------------------------------------------------------------------------
   Version 20210820~sparky7~0 (2021-08-20)
 -------------------------------------------------------------------------------
   * Added Firefox Latest, Librewolf
