--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20210904~sparky7~0 (2021-09-04)
+-------------------------------------------------------------------------------
+  * Updated zh_CN locale
+  * Removed wbar-config
+  * Added bbrun, kdocker
+
+-------------------------------------------------------------------------------
   Version 20210827~sparky7~0 (2021-08-27)
 -------------------------------------------------------------------------------
   * Added litecoin-qt, pinta, ulauncher, feedreader, newsboat, gnome-feeds
