--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------------------
+  Version 20210904~sparky6~0 (2021-09-04)
+-------------------------------------------------------------------------------
+  * Updated zh_CN locale
+  * Added bbrun, kdocker
+  * Changed TDE repos to stable
+  * Changed Virtualbox-qt to Oracle's Virtualbox-6.1
+
+-------------------------------------------------------------------------------
   Version 20210827~sparky6~0 (2021-08-27)
 -------------------------------------------------------------------------------
   * Changed exfat-utils to exfatprogs
