--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20210913~sparky6~0 (2021-09-13)
+-------------------------------------------------------------------------------
+  * Added sonobus, jove, thelounge
+  * Removed qt-fsarchiver i386
+  * Added terminal to APTus tools
+  
+-------------------------------------------------------------------------------
   Version 20210904~sparky6~0 (2021-09-04)
 -------------------------------------------------------------------------------
   * Updated zh_CN locale
