--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------------------
+  Version 20210913~sparky7~0 (2021-09-13)
+-------------------------------------------------------------------------------
+  * Added sonobus, jove, thelounge
+  * Removed qt-fsarchiver i386
+  * Added terminal to APTus tools
+  * Updated header to Sparky 7
+
+-------------------------------------------------------------------------------
   Version 20210904~sparky7~0 (2021-09-04)
 -------------------------------------------------------------------------------
   * Updated zh_CN locale
