--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20210924~sparky7~0 (2021-09-24)
+-------------------------------------------------------------------------------
+  * Replaced waterfox-current-kpe with waterfox-g3-kpe
+  * Added foot, sway desktop, meteo-qt
+
+-------------------------------------------------------------------------------
   Version 20210913~sparky7~0 (2021-09-13)
 -------------------------------------------------------------------------------
   * Added sonobus, jove, thelounge
