--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20210924~sparky6~0 (2021-09-24)
+-------------------------------------------------------------------------------
+  * Replaced waterfox-current-kpe with waterfox-g3-kpe
+  * Added meteo-qt, foot
+  * Fixed search system-others apps
+
+-------------------------------------------------------------------------------
   Version 20210913~sparky6~0 (2021-09-13)
 -------------------------------------------------------------------------------
   * Added sonobus, jove, thelounge
