--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20210924.1~sparky7~0 (2021-09-24)
+-------------------------------------------------------------------------------
+  * Fixed search system-others apps
+
+-------------------------------------------------------------------------------
   Version 20210924~sparky7~0 (2021-09-24)
 -------------------------------------------------------------------------------
   * Replaced waterfox-current-kpe with waterfox-g3-kpe
