--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20211008~sparky6~0 (2021-10-08)
+-------------------------------------------------------------------------------
+  * Added kdiskmark, kotatogram-desktop, webapp-manager, discover, vnstat, mariadb-client, mariadb-server, sqlite3, sqlitebrowser
+
+-------------------------------------------------------------------------------
   Version 20210924~sparky6~0 (2021-09-24)
 -------------------------------------------------------------------------------
   * Replaced waterfox-current-kpe with waterfox-g3-kpe
