--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20211008~sparky7~0 (2021-10-08)
+-------------------------------------------------------------------------------
+  * Added kdiskmark, kotatogram-desktop, webapp-manager, discover, vnstat, mariadb-client, mariadb-server, sqlite3, sqlitebrowser, dialect
+
+-------------------------------------------------------------------------------
   Version 20210924.1~sparky7~0 (2021-09-24)
 -------------------------------------------------------------------------------
   * Fixed search system-others apps
