--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,15 @@
 -------------------------------------------------------------------------------
+  Version 20211010~sparky7~0 (2021-10-10)
+-------------------------------------------------------------------------------
+  * Aded qstardict, dictconv, sdcv
+  * Added new category Translators
+
+-------------------------------------------------------------------------------
+  Version 20211009~sparky7~0 (2021-10-09)
+-------------------------------------------------------------------------------
+  * Fixed Trinity repos and spelling
+
+-------------------------------------------------------------------------------
   Version 20211008~sparky7~0 (2021-10-08)
 -------------------------------------------------------------------------------
   * Added kdiskmark, kotatogram-desktop, webapp-manager, discover, vnstat, mariadb-client, mariadb-server, sqlite3, sqlitebrowser, dialect
