--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20211015~sparky6~0 (2021-10-15)
+-------------------------------------------------------------------------------
+  * Fixed locales of kernel installation
+  * Added unar
+
+-------------------------------------------------------------------------------
   Version 20211010~sparky6~0 (2021-10-10)
 -------------------------------------------------------------------------------
   * Aded qstardict, dictconv, sdcv
