--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------------------
+  Version 20211015~sparky7~0 (2021-10-15)
+-------------------------------------------------------------------------------
+  * Fixed locales of kernel installation
+  * Do not install Debian RT kernel
+  * Added unar
+  * Removed ranger, gadmin-openvpn-client, gtkhash
+
+-------------------------------------------------------------------------------
   Version 20211010~sparky7~0 (2021-10-10)
 -------------------------------------------------------------------------------
   * Aded qstardict, dictconv, sdcv
