--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20211102~sparky6~0 (2021-11-02)
+-------------------------------------------------------------------------------
+  * Added Sugar desktop
+  * Don't install edex-ui on arm64 and lumina on armhf and arm64
+  * Added packages microsoft-edge-stable, yt-dlp, ungoogled-chromium
+
+-------------------------------------------------------------------------------
   Version 20211028~sparky6~0 (2021-10-28)
 -------------------------------------------------------------------------------
   * Added arm64 arch
