--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20211211~sparky6~0 (2021-12-11)
+-------------------------------------------------------------------------------
+  * Added packages firefox-sparky, firefox-esr-sparky
+
+-------------------------------------------------------------------------------
   Version 20211205~sparky6~0 (2021-12-05)
 -------------------------------------------------------------------------------
   * Added packages finalcrypt, latte-dock, sysmontask, font-manager
