--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20211227~sparky7~0 (2021-12-27)
+-------------------------------------------------------------------------------
+  * Removed packages firefox-esr-sparky, firefox-sparky
+  * Added lumina-desktop armhf and arm64
+  * Changed waterfox-g3-kpe to waterfox-g4-kpe
+
+-------------------------------------------------------------------------------
   Version 20211211~sparky7~0 (2021-12-11)
 -------------------------------------------------------------------------------
   * Added packages firefox-sparky, firefox-esr-sparky
