--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20220109~sparky6~0 (2022-01-09)
+-------------------------------------------------------------------------------
+  * Added package signal-desktop
+  * Don't install ciano on arm64
+
+-------------------------------------------------------------------------------
   Version 20211227~sparky6~0 (2021-12-27)
 -------------------------------------------------------------------------------
   * Removed package firefox-esr-sparky
