--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20220109~sparky7~0 (2022-01-09)
+-------------------------------------------------------------------------------
+  * Added package signal-desktop, cozy
+  * Don't install ciano on arm64
+  * Removed packages gnome-icon-theme-yasis. g3data, xevil, filler, spacearyarya, lix, gtans, xmpuzzles, xpuzzles, ninvaders, fs-uae-arcad, gnuboy-x, cappuccino, concalc, graphmonkey
+
+-------------------------------------------------------------------------------
   Version 20211227~sparky7~0 (2021-12-27)
 -------------------------------------------------------------------------------
   * Removed packages firefox-esr-sparky, firefox-sparky
