--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20220125~sparky7~0 (2022-01-25)
+-------------------------------------------------------------------------------
+  * Added packages nicotine, mullvad-vpn
+
+-------------------------------------------------------------------------------
   Version 20220109~sparky7~0 (2022-01-09)
 -------------------------------------------------------------------------------
   * Added package signal-desktop, cozy
