--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20220125~sparky6~0 (2022-01-25)
+-------------------------------------------------------------------------------
+  * Added packages nicotine, mullvad-vpn
+
+-------------------------------------------------------------------------------
   Version 20220109~sparky6~0 (2022-01-09)
 -------------------------------------------------------------------------------
   * Added package signal-desktop
