--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20220204~sparky6~0 (2022-02-04)
+-------------------------------------------------------------------------------
+  * Added packages teams, rainlendar2-lite, pulsemixer
+  * Install cherrytree on armhf and arm64
+
+-------------------------------------------------------------------------------
   Version 20220125~sparky6~0 (2022-01-25)
 -------------------------------------------------------------------------------
   * Added packages nicotine, mullvad-vpn
