--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20220306~sparky6~0 (2022-03-06)
+-------------------------------------------------------------------------------
+  * Added packages pulseeffects, mailspring, vala-panel, sparky-launcher
+  * Install master-pdf-editor-5 on amd64
+
+-------------------------------------------------------------------------------
   Version 20220204~sparky6~0 (2022-02-04)
 -------------------------------------------------------------------------------
   * Added packages teams, rainlendar2-lite, pulsemixer
