--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20220306~sparky7~0 (2022-03-06)
+-------------------------------------------------------------------------------
+  * Added packages pulseeffects, mailspring, vala-panel, sparky-launcher
+  * Install master-pdf-editor-5 on amd64
+  * Removed packages human-icon-theme, tangerine-icon-theme, polo-file-manager, gazebo, netmaze, hexxagon, xvier, flobopuyo, gtkpool, openclonk, tetradraw, xpaint, tangerine, aegisub, kmplayer, smuxi
+
+-------------------------------------------------------------------------------
   Version 20220204~sparky7~0 (2022-02-04)
 -------------------------------------------------------------------------------
   * Added packages teams, rainlendar2-lite, pulsemixer
