--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20220320~sparky6~0 (2022-03-20)
+-------------------------------------------------------------------------------
+  * Added packages jami, fluent-reader
+  * Install discord from sparky repos now
+
+-------------------------------------------------------------------------------
   Version 20220306~sparky6~0 (2022-03-06)
 -------------------------------------------------------------------------------
   * Added packages pulseeffects, mailspring, vala-panel, sparky-launcher
