--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20220320~sparky7~0 (2022-03-20)
+-------------------------------------------------------------------------------
+  * Added packages jami, fluent-reader
+  * Install discord from sparky repos now
+  * Install firefox-sparky instead of firefox
+
+-------------------------------------------------------------------------------
   Version 20220306~sparky7~0 (2022-03-06)
 -------------------------------------------------------------------------------
   * Added packages pulseeffects, mailspring, vala-panel, sparky-launcher
