--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20220414~sparky6~0 (2022-04-14)
+-------------------------------------------------------------------------------
+  * Added package badwolf
+
+-------------------------------------------------------------------------------
   Version 20220320~sparky6~0 (2022-03-20)
 -------------------------------------------------------------------------------
   * Added packages jami, fluent-reader
