--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20220414~sparky7~0 (2022-04-14)
+-------------------------------------------------------------------------------
+  * Added package badwolf
+  * Changed packages gearhead2-sdl to gearhead-sdl, gearhead2 to gearhead, cpupower-gui to linux-cpupower, jami to jami-all
+  * Removed packages gxmms2, lxmusic, lxmms2 
+
+-------------------------------------------------------------------------------
   Version 20220320~sparky7~0 (2022-03-20)
 -------------------------------------------------------------------------------
   * Added packages jami, fluent-reader
