--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20220505~sparky6~0 (2022-05-05)
+-------------------------------------------------------------------------------
+  * Added packages crow-translate, nala-legacy
+  * waterfox-g4-kpe changed to waterfox-g-kpe
+
+-------------------------------------------------------------------------------
   Version 20220414~sparky6~0 (2022-04-14)
 -------------------------------------------------------------------------------
   * Added package badwolf
