--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20220505~sparky7~0 (2022-05-05)
+-------------------------------------------------------------------------------
+  * Added packages crow-translate, nala
+  * waterfox-g4-kpe changed to waterfox-g-kpe
+
+-------------------------------------------------------------------------------
   Version 20220414~sparky7~0 (2022-04-14)
 -------------------------------------------------------------------------------
   * Added package badwolf
