--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------------------
+  Version 20220529~sparky6~0 (2022-05-29)
+-------------------------------------------------------------------------------
+  * tool page fixed
+  * updated Italian translate
+  * added packages bitcoin, hypnotix, aqemu, qemu-system-gui
+  * changed qemu to qemu-system 
+
+-------------------------------------------------------------------------------
   Version 20220505~sparky6~0 (2022-05-05)
 -------------------------------------------------------------------------------
   * Added packages crow-translate, nala-legacy
