--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20220607~sparky6~0 (2022-06-07)
+-------------------------------------------------------------------------------
+  * fixed liquorix, xanmod and sparky kernel installation
+  * install liquorix kernel on amd64 only
+  * added package magnus
+
+-------------------------------------------------------------------------------
   Version 20220529~sparky6~0 (2022-05-29)
 -------------------------------------------------------------------------------
   * tool page fixed
