--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------------------
+  Version 20220626~sparky6~0 (2022-06-26)
+-------------------------------------------------------------------------------
+  * fixed skype installation and reinstallation
+  * added packages notepadnext, winezgui
+  * removed installation of Sparky 686pae kernel
+  * added installation of Sparky LTS kernel
+
+-------------------------------------------------------------------------------
   Version 20220607~sparky6~0 (2022-06-07)
 -------------------------------------------------------------------------------
   * fixed liquorix, xanmod and sparky kernel installation
