--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20220704~sparky7~0 (2022-07-04)
+-------------------------------------------------------------------------------
+  * added es_ES locale
+  * removed package kopete
+
+-------------------------------------------------------------------------------
   Version 20220626~sparky7~0 (2022-06-26)
 -------------------------------------------------------------------------------
   * fixed skype installation and reinstallation
