--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20220809~sparky7~0 (2022-08-09)
+-------------------------------------------------------------------------------
+  * added packages acm, gxemul, gotop, atop, iotop, btop, g4music, clapper
+  * moved 0ad to strategy games
+
+-------------------------------------------------------------------------------
   Version 20220704~sparky7~0 (2022-07-04)
 -------------------------------------------------------------------------------
   * added es_ES locale
