--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20220809~sparky6~0 (2022-08-09)
+-------------------------------------------------------------------------------
+  * added es_ES locale
+  * added packages acm, gxemul, gotop, atop, iotop
+  * moved 0ad to strategy games
+
+-------------------------------------------------------------------------------
   Version 20220626~sparky6~0 (2022-06-26)
 -------------------------------------------------------------------------------
   * fixed skype installation and reinstallation
