--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20220928~sparky6~0 (2022-09-28)
+-------------------------------------------------------------------------------
+  * added packages kitty, lollypop, iron arm64, compiz
+  * added Sparky kernel 4.9-LTS installation
+  * updated de_DE locale
+
+-------------------------------------------------------------------------------
   Version 20220809~sparky6~0 (2022-08-09)
 -------------------------------------------------------------------------------
   * added es_ES locale
